--- a/src/components/week8/week8.stories.mdx
+++ b/src/components/week8/week8.stories.mdx
@@ -1,6 +1,8 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs';
 import {Confrim_Modal} from "./index.js";
 import {Alert_Modal} from "./index.js";
+import specs from "./assets/specs.jpg";
+
 
 <Meta title="Modal"  component="Modal" />
 
@@ -44,6 +46,13 @@ Markdown documentation.
       <Alert_Modal />
   </Story>
 </Canvas>
+
+## A. Design - Navigation Model
+
+<img src={specs} />
+
+Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
+Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
 
 ### --
 
