--- a/src/components/week3/buttons.stories.mdx
+++ b/src/components/week3/buttons.stories.mdx
@@ -8,49 +8,13 @@ import design from "./assets/Specs.jpg";
 import anatomy from "./assets/Anatomy.jpg";
 import states from "./assets/states.jpg";
 
-
 <Meta title="Button components"  component="Buttons" />
 
-<img src={like} />
+# 1 - BUTTONS: Live Demo 
 
-# Buttons
+##
 
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
-/ Principles 
-/ Types 
-/ Specs
-/ Behavies or states
-
-## I. Buttons Design  // Usage // Specs // Types // States 
-
-<img src={design} />
-
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
-
-## II. Buttons Anatomy
-
-<img src={anatomy} />
-
-
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
-
-## IV. Buttons - states
-
-<img src={states} />
-
-## V. Buttons - Coded example 
-
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
-
-### Filled in Buttons
-
+### Filled Button
 <Canvas>
   <Story name="FilledButton">
     <FilledButton />
