--- a/src/components/week3/buttons.stories.mdx
+++ b/src/components/week3/buttons.stories.mdx
@@ -8,20 +8,21 @@ import design from "./assets/Specs.jpg";
 import anatomy from "./assets/Anatomy.jpg";
 import states from "./assets/states.jpg";
 
-<Meta title="Button components"  component="Buttons" />
+<Meta title="Component 1"  component="Buttons" />
 
-# 1 - BUTTONS: Live Demo 
+#  <center> Component 1 | Buttons </center>
+
 
 ##
 
-### Filled Button
+### 1 - Filled Button
 <Canvas>
   <Story name="FilledButton">
     <FilledButton />
   </Story>
 </Canvas>
 
-### Stroke or Outlined Buttons
+### 2 - Stroke / Outlined Buttons
 
 <Canvas>
   <Story name="Stroke Buttons">
@@ -29,7 +30,7 @@ import states from "./assets/states.jpg";
   </Story>
 </Canvas>
 
-### Text Buttons
+### 3 - Text Buttons
 
 <Canvas>
   <Story name="Text Buttons">
@@ -38,7 +39,7 @@ import states from "./assets/states.jpg";
 </Canvas>
 
 
-### Floating Buttons
+### 4 - Floating Buttons
 
 <Canvas>
   <Story name="Floatings">
@@ -46,4 +47,4 @@ import states from "./assets/states.jpg";
   </Story>
 </Canvas>
 
-### --
+##
