--- a/src/components/week5/week5.stories.mdx
+++ b/src/components/week5/week5.stories.mdx
@@ -11,105 +11,32 @@ import bottomNavWireframe from "./assets/wireframe_bottomNav.jpg";
 import states from "./assets/states.jpg";
 
 
-<Meta title="Navigation"  component="Navigation" />
+<Meta title="Component 2"  component="Navigation" />
 
-# Navigation Components
+#  <center> Component 2 | Navigation </center>
 
-.
+## 
 
-## I. Navigation Model
+### <center> Modal Drawer  - Live Demo </center>
 
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
 
-## A. Design - Navigation Model
-
-<img src={modelNavigation} />
-
-Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
-Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-
-## B. Wireframe - Navigation Model
-
-<img src={modelWireframe} />
-
-Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
-totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
-Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
-Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-
-## C. Anatomy - Navigation Model
-
-<img src={modelAnatomy} />
-
-Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, 
-totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
-
-<ol>
-  <li>decimals and a dot for ordered items</li>
-  <li>decimals and a dot for ordered items</li>
-  <li>decimals and a dot for ordered items</li>
-  <li>decimals and a dot for ordered items</li>
-  <li>decimals and a dot for ordered items</li>
-  <li>decimals and a dot for ordered items</li>
-  <li>decimals and a dot for ordered items</li>
-</ol>
-
-## D. Coded Example - Navigation Model
 
 <Canvas>
-  <Story name="HiddenMenu">
+  <Story name="Modal Drawer">
       <HiddenMenu />
   </Story>
 </Canvas>
 
-## II. Bottom Navigation 
+### 
+### 
+###
+### 
 
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
+### <center> Button Drawer  - Live Demo </center>
 
-## A. Navigation Bottom Design
-
-<img src={bottomNavDesign} />
-
-Markdown documentation right in the middle of our Markdown documentation.
-
-## B. Navigation Bottom Anatomy
-
-<img src={bottomNavAnatomy} />
-
-## C. Navigation Bottom Wirframe
-
-<img src={bottomNavWireframe} />
-
-## D. Coded Example - Navigation Bottom
 
 <Canvas>
-  <Story name="BottomNavigation">
+  <Story name="Bottom drawer">
       <BottomNavigation />
   </Story>
 </Canvas>
-
-
-## Navigation - Modal drawer
-
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
-
-## Navigation - Bottom drawer
-
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
-
-<Canvas>
-  <Story name="MenuTabs">
-    <MenuTabs />
-  </Story>
-</Canvas>
-
-## III. Navigation Status
-
-<img src={states} />
