--- a/src/components/week8/week8.stories.mdx
+++ b/src/components/week8/week8.stories.mdx
@@ -4,81 +4,23 @@ import {Alert_Modal} from "./index.js";
 import specs from "./assets/specs.jpg";
 
 
-<Meta title="Modal"  component="Modal" />
+<Meta title="Component 3"  component="Modal" />
 
-# Modals
+#  <center> Component 3 | Dialogs/Modals </center>
 
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
+## 
 
-/ Principles 
-/ Types 
-/ Specs
-/ Behavies or states
-
-## I. Alert Modal - Design / / Usage // Specs
-
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
-
-## I. Alert Modal - Wireframe
-
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
-
-## I. Alert Modal - Anatomy 
-
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
-
-## I. Alert Modal - Coded example 
-
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
+### <center> Alert dialog  - Live Demo </center>
 
 <Canvas>
-  <Story name="Alert Modal">
+  <Story name="Alert dialog">
       <Alert_Modal />
   </Story>
 </Canvas>
 
-## A. Design - Navigation Model
+## 
 
-<img src={specs} />
-
-Nemo enim ipsam voluptatem qua voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
-Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-
-### --
-
-## II. Confirmation Modal - Design / Usage 
-
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
-
-## II. Confirmation Modal - Wireframe
-
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
-
-## II. Confirmation Modal - Anatomy 
-
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
-
-## II. Confirmation Modal - Coded example 
-
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
+### <center> Confirmation dialog  - Live Demo </center>
 
 <Canvas>
   <Story name="Confrim_Modal">
