--- a/src/components/week9/week9.stories.mdx
+++ b/src/components/week9/week9.stories.mdx
@@ -2,18 +2,13 @@ import { Meta, Story, Canvas } from '@storybook/addon-docs';
 import {Switch} from "./index.js";
 import specs from "./assets/specs.jpg";
 
-<Meta title="Switch"  component="Switch" />
+<Meta title="Component 5"  component="Switch" />
 
-# Switches
+#  <center> Component 5 | Switches </center>
 
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
+## 
 
-/ Principles 
-/ Types 
-/ Specs
-/ Behavies or states
+### <center> Drak theme switch OFF/ON  - Live Demo </center>
 
 <Canvas>
   <Story name="Switch">
