--- a/src/components/week4/week4.stories.mdx
+++ b/src/components/week4/week4.stories.mdx
@@ -1,18 +1,14 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs';
 import LoginForm from "./index.js";
 
-<Meta title="Login Form"  component="Login" />
+<Meta title="Component 4"  component="Login" />
 
-# Log in Components
+#  <center>Component 4 | Text Fields </center>
 
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
+## 
 
-## Log in Principles
+### <center> Outlined text fields in a login form example  - Live Demo </center>
 
-With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.With `MDX`, we can define a story for `Checkbox` right in the middle of our
-Markdown documentation.
 
 <Canvas>
   <Story name="Login Form">
